MDEV-8829: Assertion `0' failed in Explain_table_access::tag_to_json

- Add EXPLAIN/ANALYZE FORMAT=JSON handling for a few special cases.